--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build:static": "next build && next export",
+    "i18n:extract": "i18next-scanner"
   },
   "dependencies": {
     "@emotion/cache": "^11.10.5",
@@ -24,15 +26,19 @@
     "axios-hooks": "^4.0.0",
     "eslint": "8.34.0",
     "eslint-config-next": "^12.2.5",
+    "i18next": "^22.4.10",
     "lru-cache": "^7.14.1",
     "next": "^12.2.5",
+    "next-i18next": "^13.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.1",
+    "react-i18next": "^12.1.5",
     "typescript": "4.9.5",
     "yup": "^1.0.0"
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.6.0"
+    "@faker-js/faker": "^7.6.0",
+    "i18next-scanner": "^4.1.1"
   }
 }
