feature: next-auth.js

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 NEXT_PUBLIC_API_BASE=https://reqres.in/api
 NEXT_PUBLIC_ENABLE_API_MOCKUP=1
+NEXT_PUBLIC_GITHUB_ID=1
+NEXT_PUBLIC_GITHUB_SECRET=2
+NEXTAUTH_URL=https://reqres.in/api
