--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "i18next": "^22.4.10",
     "lru-cache": "^7.14.1",
     "next": "^12.2.5",
+    "next-auth": "^4.19.2",
     "next-i18next": "^13.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
