--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "8.34.0",
     "eslint-config-next": "^12.2.5",
     "i18next": "^22.4.10",
+    "jwt-decode": "^3.1.2",
     "lru-cache": "^7.14.1",
     "next": "^12.2.5",
     "next-auth": "^4.19.2",
